parser/tests/snapshots/errors__expr_bad_prefix.snap
---
source: parser/tests/errors.rs
expression: err

---
error: Unexpected token while parsing expression: `*`
  ┌─ expr_bad_prefix:1:1
  │
1 │ *x + 1
  │ ^ unexpected token


